# SHantilly-Studio

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  Makefile  README.md  SECURITY.md  StringUtils.cpp  StringUtils.h  mkdocs.yml  sonar-project.properties  string_utils.cpp  teste1.sbxproj  vcpkg.json
.context/agents/: README.md  architect-specialist.md  backend-specialist.md  bug-fixer.md  code-reviewer.md  database-specialist.md  devops-specialist.md  documentation-writer.md  feature-developer.md  frontend-specialist.md  mobile-specialist.md  performance-optimizer.md  refactoring-specialist.md  security-auditor.md  test-writer.md
.context/docs/: README.md  architecture.md  codebase-map.json  data-flow.md  development-workflow.md  glossary.md  project-overview.md  testing-strategy.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  package.yml  release.yml
.trunk/: actions  logs  notifications  out  tools  trunk.yaml
.trunk/plugins/: trunk
build-pkg/: CMakeCache.txt  Makefile  cmake_install.cmake  showbox-studio
build-pkg/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-pkg/AppDir/: .DirIcon  AppRun  showbox-studio.desktop
build-pkg/libs/showbox-ui/: Makefile  cmake_install.cmake
build-pkg/showbox-studio_autogen/: deps
build-pkg/showbox-studio_autogen/MXUWEOXILK/: moc_Canvas.cpp.d  moc_MainWindow.cpp.d  moc_ObjectInspector.cpp.d  moc_PropertyEditor.cpp.d
build-pkg/showbox-studio_autogen/PRMOGMWJPH/: moc_StudioController.cpp.d
conductor/: product.md  tech-stack.md  tracks.md  workflow.md
conductor/archive/advanced_usability_layout_v1_20260117/: index.md  metadata.json  spec.md
conductor/tracks/advanced_usability_layout_v1_20260117/: index.md  plan.md  spec.md
conductor/tracks/arch_modernization_builder_20260116/: plan.md
conductor/tracks/arch_std_legacy_isolation_20260115/: plan.md
conductor/tracks/canvas_integration_20260115/: plan.md
conductor/tracks/parser_modernization_v1_20260116/: index.md  plan.md  spec.md
conductor/tracks/performance_stability_audit_v1_20260117/: index.md  metadata.json  plan.md
conductor/tracks/studio_canvas_integration_v1_20260116/: index.md  plan.md
conductor/tracks/studio_persistence_v1_20260117/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/visual_refinement_assets_v1_20260117/: spec.md
conductor/tracks/widget_parity_v1_20260116/: index.md  metadata.json  plan.md  spec.md
docs/: ARCHITECTURE.md  Pesquisa_Gemini_CLI_Conductor.md  Projeto_Piloto_Estrategia_Delegacao_Agentes_SHantilly.md  hybrid_workflow.md  index.md
docs/html/: annotated.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_99d0482cf009f9d97a0877749b817f19.html  dir_9d6f83ec014f70d2701570d7305ab15c.html  dir_aebb8dcc11953d78e620bbef0b9e2183.html  files.html  functions.html  functions_enum.html  functions_eval.html  functions_f.html  functions_func.html  functions_g.html  functions_h.html  functions_i.html  functions_l.html  functions_m.html  functions_o.html  functions_p.html  functions_r.html  functions_t.html  functions_u.html  functions_vars.html  functions_w.html  functions_~.html  globals.html  globals_func.html  hierarchy.html  menudata.js
docs/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_5.js  all_7.js  all_b.js  all_d.js  classes_0.js  classes_3.js  classes_4.js  classes_5.js  classes_6.html  classes_6.js  classes_7.html  classes_7.js  classes_8.html  classes_8.js  classes_9.js  classes_a.html  classes_a.js  enums_0.html  enums_0.js  enumvalues_0.html  enumvalues_0.js  enumvalues_1.html  enumvalues_1.js  enumvalues_2.html  enumvalues_2.js  files_3.js  files_5.js  files_7.html  files_7.js  functions_0.js  functions_1.js  functions_10.js  functions_11.html  functions_2.js  functions_7.js  functions_8.js  (+8 more)
packaging/: start-pkg-appimage.sh
packaging/appimage/: AppRun  Criar um AppImage profissional para Qt.md  SHantilly-studio.desktop  build.sh  shantilly-studio.desktop  showbox-studio.desktop
scripts/: delegate.sh  setup_context.sh
scripts/evaluation/: run_benchmark.sh
scripts/evaluation/opencode/: prompt.txt  result_bigpickle.cpp  result_bigpickle.txt  result_glm.cpp  result_grok.txt  result_minimax.cpp  result_minimax.txt
scripts/swarm/: architect.sh  autonomous.sh  ci.sh  coder.sh  conductor.sh  doc.sh  integrator.sh  manager.sh  optimize.sh  qa.sh  research.sh
site/: 404.html  index.html
site/ARCHITECTURE/: index.html
site/Gerenciar_Projeto_Conductor/: index.html
site/Pesquisa_Gemini_CLI_Conductor/: index.html
site/Projeto_Piloto_Estrategia_Delegacao_Agentes_SHantilly/: index.html
site/SWARM_GUIDE/: index.html
site/html/: classes.html  functions_c.html  functions_d.html  functions_e.html  functions_s.html  index.html
site/html/search/: all_4.js  all_6.js  all_9.js  all_a.js  all_e.js  classes_1.js  classes_2.js  classes_5.html  classes_9.html  files_0.js  files_1.js  files_2.js  files_4.js  files_6.js  functions_11.js  functions_3.js  functions_5.js  functions_b.js  functions_d.js  functions_e.js  variables_0.js  variables_3.js
site/hybrid_workflow/: index.html
site/search/: search_index.json
src/: dev.Dockerfile  main.cpp  start-dev.sh
src/core/: IStudioWidgetFactory.h  PreviewManager.cpp  PreviewManager.h  ProjectSerializer.cpp  ProjectSerializer.h  ScriptGenerator.cpp  ScriptGenerator.h  StudioCommands.h  StudioController.cpp  StudioController.h  StudioWidgetFactory.h
src/gui/: ActionEditor.cpp  ActionEditor.h  Canvas.cpp  Canvas.h  DesignerEventFilter.cpp  DesignerEventFilter.h  MainWindow.cpp  MainWindow.h  ObjectInspector.cpp  ObjectInspector.h  PropertyEditor.cpp  PropertyEditor.h
stringutils_test/: CMakeLists.txt  main.cpp
template/: bootstrap.sh
tests/: CMakeLists.txt  tst_Hierarchy.cpp  tst_ProjectSerializer.cpp  tst_ScriptGenerator.cpp  tst_StudioIntegration.cpp  tst_StylePerformance.cpp  tst_UndoRedo.cpp  tst_WidgetConfigs.cpp
(+99 files in other folders)
